--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "lib": ["es7", "dom"],
     "typeRoots": ["node_modules/@types"],
     "baseUrl": "./",
+    "types": ["vuetify"],
     "paths": {
       "@/*": ["src/main/webapp/app/*"]
     },
