--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /src/main/webapp/content/css/main.css
 /target/classes/static/**
 /src/test/javascript/coverage/
-
+/src/main/resources/config/application-dev.yml
 ######################
 # Project Config
 ######################
@@ -162,3 +162,6 @@ Desktop.ini
 ######################
 /coverage/
 /.nyc_output/
+.env
+
+/.vscode
