--- a/src/main/resources/config/application-heroku.yml
+++ b/src/main/resources/config/application-heroku.yml
@@ -12,7 +12,7 @@
 
 eureka:
   instance:
-    hostname: configme-preprod.herokuapp.com
+    hostname: configme.herokuapp.com
     non-secure-port: 80
     prefer-ip-address: false
 
