--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "workbox-webpack-plugin": "6.2.4"
   },
   "engines": {
-    "node": ">=14.17.6",
+    "node": "=14.17.1",
     "npm": ">= 6.14.4"
   },
   "cacheDirectories": [
