Début des fix avant pull de dev

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.projectKey=M2-GI-ConfigMe_configme
 sonar.sources=src/main/
 sonar.host.url=https://sonarcloud.io
 
+#sonar.branch.name=local_feature/sonarFixCode
+
 sonar.tests=src/test/
 sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
 sonar.java.codeCoveragePlugin=jacoco
