--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,6 +13,8 @@ jobs:
       JHI_DISABLE_WEBPACK_LOGS: true
       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY}}
       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY}}
+      AWS_MAIL_PASSWORD: ${{ secrets.AWS_MAIL_PASSWORD}}
+      AWS_MAIL_USER: ${{ secrets.AWS_MAIL_USER}}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
